--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	
-	<title>YOUR NAME</title>
+	<title>Mia Yoshida</title>
 </head>
 <body>
 
-	<h1>YOUR NAME</h1>
+	<h1>Mia Yoshida</h1>
 	
 </body>
 </html>
